# honors_project

./: .gitignore  CMakeLists.txt  resources.qrc
include/auth/: authenticator.h  email_validator.h  user_session.h
include/database/: database_manager.h  textbook.h
include/ui/: cart_page.h  checkout_window.h  login_window.h  mainshop_window.h  profile_menu.h  profile_page.h  registration_window.h  textbook_page.h  wishlist_page.h
src/: CMakeLists.txt  main.cpp
src/auth/: authenticator.cpp  email_validator.cpp  user_session.cpp
src/database/: database_manager.cpp  textbook.cpp
src/ui/: cart_page.cpp  checkout_window.cpp  login_window.cpp  mainshop_window.cpp  profile_menu.cpp  profile_page.cpp  registration_window.cpp  textbook_page.cpp  wishlist_page.cpp
tests/: CMakeLists.txt  database_test.cpp
